--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -5,7 +5,8 @@
 
     @include breakpoint-up(medium) {
       display: flex;
-      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
   }
 }
